# qlir

./: .gitignore  CONTRIBUTING.md  MODULE_ARCH_AND_USER_IMPORT_UX.MD  Makefile  Notes_and_Thoguhts.md  README.md  STRUCTURE.md  TESTING.md  Todo.md  USAGE.md  poetry.lock.old  pyproject.toml  pytest.ini  refactor_ideas.md
Building_Studies/: Conceptual_Primitives.md  setup_compose.md
demos/: viz_demo.py
examples/: viz_demo.py
examples/breakouts/: .gitignore  README.md  pyproject.toml
examples/breakouts/breakouts/: detect.py  main.py
examples/update_proj_template_with_this/: Note_to_self.md  agg-reset.sh  aggsol1m.sh  aggsol1s.sh  databtc1m.sh  databtc1s.sh  dataeth1m.sh  datasol1m.sh  datasol1s.sh  pyproject.toml  sendtolib.sh
examples/update_proj_template_with_this/afterdata/: .gitignore  README.md  datasol1m.sh
examples/update_proj_template_with_this/afterdata/src/afterdata/: main.py
examples/update_proj_template_with_this/afterdata/src/afterdata/etl/binance/: agg_server.py  data_server.py  main.py
examples/update_proj_template_with_this/afterdata/src/afterdata/etl/drift/: fetch_initial_data.py
examples/update_proj_template_with_this/afterdata/src/afterdata/logging/: colors.py  filters.py  formatter_factories.py  formatters.py  handler_factories.py  level_resolution.py  logging_profiles.py  logging_setup.py
examples/update_proj_template_with_this/src/afterdata/: main.py  runtime_config.py
examples/update_proj_template_with_this/src/afterdata/analyses/: mae.py  sma_analyses.py  volatility.py
examples/update_proj_template_with_this/src/afterdata/analysis_funcs/: frequency.py  persistence.py  persistence_compare.py  slope_angle.py
examples/update_proj_template_with_this/src/afterdata/etl/: LTE.py
examples/update_proj_template_with_this/src/afterdata/etl/binance/: agg_server.py  data_server.py  main.py
examples/update_proj_template_with_this/src/afterdata/etl/binance/agg_server_known_issues/: head parquet being written to multiple times at EOR.md
examples/update_proj_template_with_this/src/afterdata/etl/drift/: fetch_initial_data.py  main.py
examples/update_proj_template_with_this/src/afterdata/logging/: formatter_factories.py  formatters.py  fulltext_styles.py  level_colors.py  logging_setup.py  telemetry.py
examples/update_proj_template_with_this/telemetry/: manifest_rebuild.txt
other-docs/: Canonical_Instruments.md  LIBRARY_README.md  PROJECT_README.md
other-docs/older/: LIBRARY_README.md  PROJECT_README.md
quickstart/: qlir_quickstart.py
quickstart/templates/: README.md.tpl  fetch_initial_data.py.tpl  get_data.py.tpl  logging_setup.py.tpl  main.py.tpl  pyproject.toml.tpl
quickstart/templates/etl/: binance.py.tpl  drift.py.tpl
quickstart/templates/etl/binance/: main.py.tpl  (+2 more)
src/qlir/: __init__.py  api.py  cli.py  exceptions.py
src/qlir/__depreceated_cli/: instruments.py
src/qlir/cli/: binance_klines_agg.py  instruments.py
src/qlir/column_bundles/: README.md  excursion.py  leg_distance.py  persistence.py  trend_with_legs.py
src/qlir/core/: __init__.py  constants.py
src/qlir/data/: README.md  __init__.py  candle_quality.py  csv.py  drift.py  drift_fill.py  load.py  normalize.py
src/qlir/df/: group_between.py  guard.py  utils.py
src/qlir/execution/: apply_execution_model.py
src/qlir/indicators/: __init__.py  _api.py  arp.md  arp.py  atr.py  atrp.py  boll.py  indicators_arch.md  macd.py  range_shock.md  rsi.py  sma.py  vwap.py  vwap.py.README.md
src/qlir/io/: __init__.py  checkpoint.py  delete.py  filetype.py  helpers.py  reader.py  union_files.py  writer.py
src/qlir/logging/: advisory.py  data_quality.py  ensure.py  logdf.py
src/qlir/perf/: ___perf_README.md  df_copy.py  logging.py  memory_event.py
src/qlir/servers/: clone_repo_and_install_py_deps.sh  full_install.sh  install_and_start.sh  install_system_deps.sh  start_all.sh  start_all_simple.sh
src/qlir/signals/: __init__.py  combo.py  vwap_rules.py
src/qlir/telemetry/: telemetry.py
src/qlir/time/: constants.py  count_intervals.py  ensure_utc.py  iso.py  misc.py  ms_per_unit.py  timefreq.py  timeunit.py
src/qlir/utils/: df_ops.py  enum.py  logdf.py  pdtools.py  time.py
src/qlir/viz/: README.md  __init__.py  core.py  mpl.py  registry.py
tests/: config_tests.ignore_py  conftest.py  fixtures.py  test_csv_loader.py  test_drift_normalize.py  test_ohlcv_loader.py  test_signals.py  test_vwap_touch_eps.py
tests/_misc/_old/: test_ohlcv_loader.py
tests/core/counters/: multivariate.py  test_multivariate.py  test_univariate.py
tests/core/ops/: test_pointwise.py
tests/core/relations/: test_bar_relations.py  test_comparators.py
tests/data/: README.md  sol_1m.test_csv  test_drift.py  test_drift_using_imported_openapi_created_lib.py  union_files.py
tests/data/candle-quality-py/: test__ensure_utc.py  test__sort_dedupe.py  test_detect_candle_gaps.py  test_ensure_homogeneous_timeframe.py  test_infer_freq.py  test_validate_candles.py
tests/data/resampling/: test_generate_candles.py
tests/data/sources/: test_drift.py  test_drift_using_imported_openapi_created_lib.py
tests/df/condition_set/: test_construction.py
tests/df/distributions/: test_condition_set_persistence.py
tests/features/: distances.py  test_vwap_block.py
tests/features/boll/: candle_relations_reference_implementations.py  candle_relations_tests.py  test_width_pressure.py  test_width_step.py
tests/features/macd/: test_histogram_loose_pyramid.py  test_histogram_pyramid.py  test_histrogram.py  test_macd_full_pyramidal_annotation.py
tests/features/vwap/: test_vwap_touch_eps.py
tests/indicators/: README.md  atr.py  boll.py  macd.py  test_indicators_boll.py  test_indicators_macd.py  todo_rsi.py  vwap_core.py  vwap_session.py
tests/integration/: test_add_new_candles_to_dataset.py  test_drift_normalized_csv.py
tests/presorted/: README.md  test_excursion.py
tests/servers/analysis_server/: conftest.py  test_event_conditions.py  test_required_df_validation.py  test_smoke_event_flow.py
tests/signals/: test_signals.py
tests/time/: test_ensure_utc.py  test_timefreq_resolution_str.py
(+410 files in other folders)
