[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qlir"
version = "0.1.0"  # or use setuptools-scm (see note #5)
description = "Indicators ➜ Features ➜ Signals on Pandas"
readme = "README.md"
requires-python = ">=3.10, <4.0"
dependencies = ["pandas", "requests", "numpy", "pyarrow", "tabulate", "matplotlib", 
# "drift-data-api-client @ file:///home/tjr/datasources/drift/drift-data-api-client/dist/drift_data_api_client-1.0.0-py3-none-any.whl" 
"httpx (>=0.28.1,<0.29.0)",
"typing-extensions (>=4.15.0,<5.0.0)",
"psutil (>=7.2.2,<8.0.0)"
]
authors = [{ name = "Thomas Rones" }]
license = { text = "MIT" }
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
urls = { "Source" = "https://github.com/Trones21poet/qlir" }

[project.scripts]
data_server = "qlir.servers.data_server.run_server:main"
agg_server = "qlir.servers.agg_server.run_server:main"
notifications_server = "qlir.servers.notification_server.server:main"
analysis_server = "qlir.servers.analysis_server.server:main"
ops_watcher = "qlir.servers.ops_watcher.server:main"
analysis = "qlir.servers.analysis_server.run_analysis:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6"]

# Optional CLI entry point if you add qlir/cli.py
# [project.scripts]
# qlir = "qlir.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

# If you add py.typed:
# [tool.setuptools.package-data]
# qlir = ["py.typed"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q --maxfail=1"
# Prefer editable install instead of pythonpath hacks:
# pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

# What Ruff should check
select = [
    # "F",    # pyflakes (unused imports, undefined names)
    "I",    # isort (import ordering)
]

# Allow Ruff to auto-fix
fix = true

# Exclude common noise
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist",
    "examples",
    "quickstart"
]

[tool.ruff.isort]
combine-as-imports = true
force-sort-within-sections = true
known-first-party = ["qlir"]


[dependency-groups]
dev = [
    "ruff (>=0.14.11,<0.15.0)"
]
