[project]
name = "afterdata"
version = "0.1.0"
description = "Starter project using QLIR"
requires-python = ">=3.10, <4.0"
readme = "README.md"
dependencies = [
  "pandas>=2.2,<3.0",
  "numpy>=1.26,<2.0",
  # Local path dependency (edit as needed)
  #"qlir @ file:///home/tjr/gh/qlir",
  # Or use the Git version:
  # "qlir @ git+https://github.com/Trones21/qlir.git@main",
]

# ------------- 🔥 Editable qlir installation (advanced) ------------------
# 1. Comment out the qlir line in [project].dependencies above.
# 2. Run:    poetry install
# 3. Then:   poetry run pip install -e <absolute_path_to>/qlir
#
# This installs qlir in *editable mode* inside the same Poetry virtualenv.
# WARNING: Any edits you make to qlir’s source files (at the location you cloned it)
# will immediately affect this project, because Python imports directly from that path.

# To confirm that qlir is installed in editable mode:
#   poetry run python -c "import qlir; print(qlir.__file__)"
#
# Expected output (example):
#   <absolute_path_to_qlir>/qlir/src/qlir/__init__.py

# NOTE:
# In an editable install, you'll still see "qlir-<version>.dist-info" in site-packages,
# but there will NOT be a copied "qlir/" package directory there.
# Python resolves qlir imports directly from your local source tree.
#
# All those *.dist-info directories in site-packages are only metadata for installed packages
# (including qlir and its dependencies).

# ------------- Non-editable qlir installation ---------------------------
# If you do NOT want editable mode, but you want changes to your local qlir clone
# to be picked up occasionally:
#
# - keep qlir listed in [project].dependencies (normal PEP 508 syntax)
# - and whenever you update your local qlir clone, do:
#       poetry run pip uninstall qlir
#       poetry install
#
# This reinstalls qlir as a regular (non-editable) dependency from the path/URL you specified.


packages = [{ include = "afterdata", from = "src" }]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
main = "afterdata.main:entrypoint"
binance-data-server-arg = "afterdata.etl.binance.main:fetch_raw_specific"
binance-data-server-all = "afterdata.etl.binance.main:fetch_raw_all"
binance-data-server-file-def = "afterdata.etl.binance.main:fetch_raw_default"

binance-agg-server-arg = "afterdata.etl.binance.main:aggregate_raw_specific"

lte = "afterdata.etl.LTE:clean_data"

sma = "afterdata.analyses.sma_analyses:main"


drift_fetch = "afterdata.etl.drift.fetch_initial_data:main"
drift_append = "afterdata.etl.drift.fetch_and_append_new_data:main"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
